--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>This is my git stuff</h1>
+    <p>Login form</p>
     <script src="app.js"></script>
   </body>
 </html>
